add a button for the tests

--- a/soluche_papier.html
+++ b/soluche_papier.html
@@ -14,6 +14,7 @@
     </div>
 
     <code>
+        <a href="#" onclick="runTests()">Tests</a>
 	    <div id="tests"></div>
     </code>
     <script>
@@ -161,8 +162,8 @@ test(hasFoodAtTurn([{food:0},{food:0},{food:0}], 1), false, "test hasFoodAtTurn(
 test(hasFoodAtTurn([{food:0},{food:0},{food:1}], 1), true, "test hasFoodAtTurn() turn 2");
 test(hasFoodAtTurn([{food:0},{food:0},{food:2}], 1), true, "test hasFoodAtTurn() turn 2");
 test(hasFoodAtTurn([{food:0},{food:0},{food:4}], 1), true, "test hasFoodAtTurn() turn 2");
+return false;
 }
-runTests();
     </script>
 	</body>
 </html>
