--- a/soluche_papier.html
+++ b/soluche_papier.html
@@ -4,7 +4,15 @@
     <title>Soluche papier</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <style>
+    .input-food {
+        width : 40px;
+    }
+    .input-drink {
+        width : 40px;
+    }
+    
+    </style>
 </head>
 <body>
 	<div>
@@ -12,6 +20,7 @@
             
         </table>
     </div>
+    <button onclick="saveTurn()">Enregistrer le tour</button>
 
     <code>
         <a href="#" onclick="runTests()">Tests</a>
@@ -39,16 +48,31 @@ var players = [
 
 function load() {
     html = '';
+    html += '<tr>';
+    html += '<th>Joueurs</th>';
+    html += '<th>Nouveau tour</th>';
+    for (let turnIdx = 0; turnIdx < players[0].turns.length; turnIdx++) {
+        if (turnIdx === 0) {
+            html += '<th>Tour courrant</th>';
+        } else {
+            html += '<th>il y a '+turnIdx+' tour'+(turnIdx>=2?'s':'')+'</th>';
+        }
+    }
+    html += '</tr>';
     for (let index = 0; index < players.length; index++) {
         const player = players[index];
         html += '<tr>';
-        html += '<th onclick="addTurn('+index+')">'+player.name+' ('+calcCurrentTaux(player)+')</th>'
+        html += '<th>'+player.name+' ('+calcCurrentTaux(player)+')</th>'
+        html += '<td>';
+        html += 'Bouffe:  <input type="number" id="food_'+index+'"  class="input-food"  value="0" required="required" min="0" max="50" step="1" /><br />';
+        html += 'Boisson: <input type="number" id="drink_'+index+'" class="input-drink" value="0" required="required" min="0" max="50" step="1" /><br />';
+        html += '</td>';
         for (let turnIdx = 0; turnIdx < player.turns.length; turnIdx++) {
             var turn = player.turns[turnIdx];
             html += '<td>';
-            html += 'food:'+turn.food+'<br />';
-            html += 'drink:'+turn.drink+'<br />';
-            html += 'taux:'+calcTaux(turn.drink, turnIdx, hasFoodAtTurn(player.turns, turnIdx))+'</td>';
+            html += 'Bouffe:'+turn.food+'<br />';
+            html += 'Boisson:'+turn.drink+'<br />';
+            html += 'Taux:'+calcTaux(turn.drink, turnIdx, hasFoodAtTurn(player.turns, turnIdx));
             html += '</td>';
         }
         html += '</tr>';
@@ -58,19 +82,16 @@ function load() {
     tblPlayers.innerHTML = html;
 }
 
-function addTurn(playerIdx) {
-    var food = prompt('food?');
-    var drink = prompt('drink?');
-    if (food === null || drink === null || food === '' || drink === '') {
-        return ;
+function saveTurn() {
+    for (let playerIdx = 0; playerIdx < players.length; playerIdx++) {
+        players[playerIdx].turns.unshift(
+            {
+                "food":  parseInt(document.getElementById("food_"+playerIdx).value),
+                "drink": parseInt(document.getElementById("drink_"+playerIdx).value),
+            }
+        );
     }
-    players[playerIdx].turns.unshift(
-        {
-            food: parseInt(food),
-            drink: parseInt(drink)
-        }
-    );
-    load();
+    load()
 }
 
 function calcCurrentTaux(player) {
