Add game repository to save/load game from browser localStorage

--- a/soluche_papier.html
+++ b/soluche_papier.html
@@ -35,6 +35,7 @@
     <script src="js/Turn.js"></script>
     <script src="js/Player.js"></script>
     <script src="js/Game.js"></script>
+    <script src="js/GameRepository.js"></script>
     <script src="js/Gui.js"></script>
     <script> 
     var GUI = new Gui();
