support du perso

--- a/cartes.md.html
+++ b/cartes.md.html
@@ -80,6 +80,21 @@
 *     '-----------------'     
 ********************************************************
 
+
+## Support
+
+***********************************
+*     
+*    /\
+*   /  \      
+*  /    \    /\
+* /      \__/  \
+*
+*
+***********************************
+
+
+
 ## PNJ
 
 <script>
