--- a/cartes.md.html
+++ b/cartes.md.html
@@ -1,44 +1,58 @@
 # cartes
 
-********************************************************
-*     .-----------------.         .-----------------.  
-*    |    Paillardier    |       |      capote       | 
-*    +-------------------+       +-------------------+ 
-*    | TYPE: item        |       | TYPE: item        | 
-*    | permet de chanter |       |  .-. .-.          | 
-*    |      1 fois       |       | |   |   |         | 
-*    |                   |       |  \     /   pour   | 
-*    |                   |       |   \   /  chopper  | 
-*    |                   |       |    \ /            | 
-*    |                   |       |     '             |   
-*    | coup de départ: 1 |       | coup de départ: 1 | 
-*     '-----------------'         '-----------------'  
-*                             
-*     .-----------------.         .-----------------.   
-*    |     eco cup       |       |  verre à pinte    |  
-*    +-------------------+       +-------------------+  
-*    | TYPE: item        |       | TYPE: item        |  
-*    | réserve 8 doses   |       | réserve 8 doses   |  
-*    |                   |       |                   |    
-*    |      |  |         |       |     |   |.-.      |  
-*    |      |  |         |       |     |   |   |     |  
-*    |      +--+         |       |     |   |   |     |  
-*    |                   |       |     +---+'-'      |  
-*    | coup de départ: 1 |       | coup de départ: 1 |  
-*     '-----------------'         '-----------------'   
+## les types de cartes
+
+- cartes PNJ : perso ses caractéristiques: boisson, boissonOpti, boisson, credibilitruc
+- items permanant : eco cup ou autre
+
+
+## Les cartes
+
+
+
+
+
+
+
+**********************************************************************************
+*     .-----------------.         .-----------------.         .-----------------. 
+*    |    Paillardier    |       |      capote       |       |préservatif féminin|
+*    +-------------------+       +-------------------+       +-------------------+
+*    | TYPE: item        |       | TYPE: item        |       | TYPE: item        |
+*    | permet de chanter |       |  .-. .-.          |       |                   |
+*    |      1 fois       |       | |   |   |         |       |                   |
+*    |                   |       |  \     /   pour   |       |            pour   |
+*    |                   |       |   \   /  chopper  |       |          chopper  |
+*    |                   |       |    \ /            |       |                   |
+*    |                   |       |     '             |       |                   |
+*    | coup de départ: 1 |       | coup de départ: 1 |       | coup de départ: 1 |
+*     '-----------------'         '-----------------'         '-----------------' 
+*                                                                                 
+*     .-----------------.         .-----------------.         .-----------------. 
+*    |     eco cup       |       |  verre à pinte    |       |  corne            |
+*    +-------------------+       +-------------------+       +-------------------+
+*    | TYPE: item        |       | TYPE: item        |       | TYPE: item        |
+*    | réserve 8 doses   |       | réserve 8 doses   |       | réserve 8 doses   |
+*    |                   |       |                   |       |                   |
+*    |      |  |         |       |     |   |.-.      |       |     l'eco cup du  |
+*    |      |  |         |       |     |   |   |     |       |     viking        |
+*    |      +--+         |       |     |   |   |     |       |                   |
+*    |                   |       |     +---+'-'      |       |                   |
+*    | coup de départ: 1 |       | coup de départ: 1 |       | coup de départ: 1 |
+*     '-----------------'         '-----------------'         '-----------------' 
 *
-*     .-----------------.         .-----------------.   
-*    |       gôle        |       |    chartreuse     |  
-*    +-------------------+       +-------------------+  
-*    | TYPE: item        |       | TYPE: item        |  
-*    | 4 doses           |       | 6 doses           |  
-*    | gagne: +5@ /perso |       | gagne: +6@ /perso |  
-*    |                   |       |                   |  
-*    |                   |       |                   |  
-*    |                   |       |                   |  
-*    |                   |       |                   |    
-*    | coup de départ: 1 |       | coup de départ: 1 |  
-*     '-----------------'         '-----------------'   
+*     .-----------------.         .-----------------.         .-----------------. 
+*    |  gôle de génépi   |       |    chartreuse     |       |   gôle de poire   |
+*    +-------------------+       +-------------------+       +-------------------+
+*    | TYPE: item        |       | TYPE: item        |       | TYPE: item        |
+*    | 4 doses           |       | 6 doses           |       | 4 doses           |
+*    | gagne: +5@ /perso |       | gagne: +6@ /perso |       | gagne: +5@ /perso |
+*    |                   |       |                   |       |                   |
+*    |                   |       |                   |       |                   |
+*    |                   |       |                   |       |                   |
+*    |                   |       |                   |       |                   |
+*    | coup de départ: 1 |       | coup de départ: 1 |       | coup de départ: 1 |
+*     '-----------------'         '-----------------'         '-----------------' 
 *   
 *     .-----------------.         .-----------------.     
 *    |     rebloch'      |       |     saucisson     |    
@@ -78,22 +92,8 @@
 *    |                   |    
 *    | coup de départ: 1 |    
 *     '-----------------'     
-********************************************************
-
-
-## Support
-
-***********************************
-*     
-*    /\
-*   /  \      
-*  /    \    /\
-* /      \__/  \
 *
-*
-***********************************
-
-
+**********************************************************************************
 
 ## PNJ
 
